--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -4,18 +4,18 @@ $header-font: 'Be Vietnam Pro', sans-serif;
 $transition-style: .3s cubic-bezier(.4,.4,0,1);
 
 .header {
-  --s-font: $header-font;
+  --s-font-ecbb00d0: 'Be Vietnam Pro';
   -webkit-font-smoothing: antialiased;
   -webkit-backface-visibility: hidden;
   border: 0;
   box-sizing: border-box;
   color: #333;
-  font-family: $header-font;
+  font-family: sans-serif;
   line-height: 1;
   list-style: none;
   padding: 0;
   text-decoration: none;
-  transition: $transition-style;
+  transition: .3s cubic-bezier(.4,.4,0,1);
   word-spacing: 1px;
   display: flex;
   pointer-events: all;
@@ -25,19 +25,23 @@ $transition-style: .3s cubic-bezier(.4,.4,0,1);
   align-items: center;
   background: rgba(0,0,0,0.0);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-left: 0px solid rgba(0, 0, 0, 0.1);
+  border-right: 0px solid rgba(0, 0, 0, 0.1);
+  border-top: 0px solid rgba(0, 0, 0, 0.1);
   flex: none;
   flex-direction: row;
   flex-wrap: nowrap;
   height: 60px;
   justify-content: space-between;
   margin: 0px 20px 0px;
+  transition-delay: 0ms;
   transition-duration: 1000ms;
   width: calc(100% - 40px);
   max-width: calc(100% - 40px);
 }
 
 .name {
-  --s-font: $header-font;
+  --s-font-ecbb00d0: 'Be Vietnam Pro';
   -webkit-font-smoothing: antialiased;
   -webkit-backface-visibility: hidden;
   border: 0;
@@ -46,7 +50,7 @@ $transition-style: .3s cubic-bezier(.4,.4,0,1);
   margin: 0;
   padding: 0;
   text-decoration: none;
-  transition: $transition-style;
+  transition: .3s cubic-bezier(.4,.4,0,1);
   word-spacing: 1px;
   flex: none;
   flex-wrap: nowrap;
@@ -61,7 +65,7 @@ $transition-style: .3s cubic-bezier(.4,.4,0,1);
   overflow-wrap: anywhere;
   word-break: break-word;
   color: #000000;
-  font-family: var(--s-font);
+  font-family: var(--s-font-ecbb00d0);
   font-size: 17px;
   font-weight: 700;
   height: auto;
