--- a/src/components/base.module.scss
+++ b/src/components/base.module.scss
@@ -50,3 +50,24 @@
     margin: 20px 0 0;
     max-width: 100%;
 }
+
+.image {
+    position: relative;
+    background-image: url("https://images.unsplash.com/photo-1626371653196-d86769521623?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80");
+}
+
+.image:before {
+    background-position: 50%;
+    background-size: cover;
+    border-radius: inherit;
+    content: "";
+    height: 100%;
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    transition: inherit;
+    width: 100%;
+    z-index: -2;
+}
+
