--- a/src/components/Titre.module.scss
+++ b/src/components/Titre.module.scss
@@ -14,19 +14,95 @@
     z-index: 0;
 }
 
+.TitleContainer{
+    --s-font-ecbb00d0: 'Be Vietnam Pro';
+    -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    border: 0;
+    box-sizing: border-box;
+    color: #333;
+    font-family: sans-serif;
+    line-height: 1;
+    list-style: none;
+    margin: 0;
+    text-decoration: none;
+    transition: .3s cubic-bezier(.4,.4,0,1);
+    word-spacing: 1px;
+    display: flex;
+    pointer-events: all;
+    position: relative;
+    z-index: 0;
+    flex: none;
+    justify-content: space-between;
+    padding: 0px;
+    transition-duration: 1000ms;
+    width: 100%;
+    max-width: 100%;
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.TextContainer {
+    --s-font-ecbb00d0: 'Be Vietnam Pro';
+    -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    border: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    transition: .3s cubic-bezier(.4,.4,0,1);
+    word-spacing: 1px;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    pointer-events: all;
+    position: relative;
+    z-index: 0;
+    display: block;
+    word-break: break-word;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 400;
+    height: auto;
+    line-height: 1;
+    padding: 0px 0px 0px;
+    text-align: left;
+    flex: 1;
+    width: auto;
+    margin: 0px 0px 0px 0px;
+    max-width: 100%;
+}
 
 
 h1 {
+    --s-font-ecbb00d0: 'Be Vietnam Pro';
+    pointer-events: all;
+    word-break: break-word;
+    -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    border: 0;
+    box-sizing: border-box;
+    list-style: none;
+    padding: 0;
+    text-decoration: none;
+    transition: .3s cubic-bezier(.4,.4,0,1);
+    word-spacing: 1px;
     color: inherit;
-    font-family: inherit;
     font-style: inherit;
     line-height: inherit;
     text-align: inherit;
     display: block;
     font-weight: 400 !important;
     letter-spacing: -0.04em;
-    margin: 0;
+    margin: 0px 0px 0px 0px;
     font-size: 44px;
+}
+
+.introtitle {
+    // font-weight: 400 !important;
 }
 
 strong {
@@ -41,7 +117,7 @@ strong {
     font-weight: 700;
 }
 
-.iconContainer {
+.iconItem {
     color: #333;
     font-family: sans-serif;
     line-height: 1;
@@ -59,4 +135,35 @@ strong {
     margin: 0 0 0 5px;
     width: 38px;
     max-width: calc(100% - 5px);
+}
+
+.iconContainer {
+    --s-font-ecbb00d0: 'Be Vietnam Pro';
+    -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    border: 0;
+    box-sizing: border-box;
+    color: #333;
+    font-family: sans-serif;
+    line-height: 1;
+    list-style: none;
+    padding: 0;
+    text-decoration: none;
+    transition: .3s cubic-bezier(.4,.4,0,1);
+    word-spacing: 1px;
+    display: flex;
+    pointer-events: all;
+    position: relative;
+    z-index: 0;
+    align-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.0);
+    flex: none;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: auto;
+    justify-content: flex-end;
+    width: auto;
+    margin: 20px 0px 0px 0px;
+    max-width: 100%;
 }
