--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,3 +1,19 @@
+.wrapper { 
+  background: #ffffff; 
+  transition: background 0.5s cubic-bezier(0.4, 0.4, 0, 1); 
+  align-content: center;
+  align-items: center;
+  display: flex;
+  background: #ffffff;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 100%;
+}
+
+
 .container {
   --s-font-ecbb00d0: 'Be Vietnam Pro';
   -webkit-font-smoothing: antialiased;
@@ -24,9 +40,14 @@
   flex-wrap: nowrap;
   height: auto;
   justify-content: flex-start;
+  margin: 60px 20px 0px;
   width: 1160px;
-  margin: 35px 20px 0px;
   max-width: calc(100% - 40px);
+    @media screen and (max-width: 840px)
+      {
+          margin: 35px 20px 0px;
+          max-width: calc(100% - 40px);
+      }
   }
 
   .container2 {
@@ -49,13 +70,22 @@
     align-content: flex-start;
     align-items: flex-start;
     flex: none;
-    justify-content: center;
-    padding: 0px;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
-    margin: 30px 0px 0px 0px;
+    justify-content: center;
+    margin: 50px 0px 0px 0px;
+    padding: 0px;
     width: 100%;
     max-width: 100%;
+
+    @media screen and (max-width: 840px)
+      {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 30px 0px 0px 0px;
+        width: 100%;
+        max-width: 100%;
+      }
   }
   
   .experience {
@@ -84,9 +114,16 @@
     flex-wrap: nowrap;
     height: auto;
     justify-content: flex-start;
+    margin: 0px 0px 0px 70px;
     width: auto;
-    margin: 50px 0px 0px 0px;
-    max-width: 100%;
+    max-width: calc(100% - 70px);
+
+    @media screen and (max-width: 840px)
+      {
+        margin: 50px 0px 0px 0px;
+        max-width: 100%;
+      }
+
   }
 
   .education {
@@ -109,14 +146,20 @@
     align-content: flex-start;
     align-items: flex-start;
     flex: none;
+    flex-direction: row;
+    flex-wrap: nowrap;
     height: auto;
     justify-content: center;
     margin: 40px 0px 0px 0px;
     padding: 0px;
     width: 100%;
     max-width: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
+
+    @media screen and (max-width: 540px)
+      {
+        flex-direction: column;
+        flex-wrap: nowrap;
+      }
   }
 
   .skills {
@@ -147,5 +190,64 @@
     justify-content: flex-start;
     margin: 0px 0px 0px 0px;
     width: 100%;
-    max-width: 100%;
+    max-width: 50%;
+
+    @media screen and (max-width: 540px)
+      {
+        margin: 0px 0px 0px 0px;
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+      }
+
+    @media screen and (max-width: 1140px)
+      {
+        margin: 0px 15px 0px 0px;
+        width: calc(50% - 15px);
+        max-width: calc(50% - 15px);
+      }
+  }
+
+  .Projets {
+    --s-font-ecbb00d0: 'Be Vietnam Pro';
+    -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    border: 0;
+    box-sizing: border-box;
+    color: #333;
+    font-family: sans-serif;
+    line-height: 1;
+    list-style: none;
+    padding: 0;
+    text-decoration: none;
+    transition: .3s cubic-bezier(.4,.4,0,1);
+    word-spacing: 1px;
+    display: flex;
+    pointer-events: all;
+    position: relative;
+    z-index: 0;
+    align-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.0);
+    flex: none;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: auto;
+    justify-content: flex-start;
+    margin: 0px 0px 0px 20px;
+    width: calc(50% - 20px);
+    // max-width: calc(50% - 20px);
+
+    @media screen and (max-width: 540px) {
+        margin: 40px 0px 0px 0px;
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+    }
+        
+    @media screen and (max-width: 1140px) {
+        margin: 0px 0px 0px 15px;
+        width: calc(50% - 15px);
+        max-width: calc(50% - 15px);
+    }
   }
