--- a/src/components/Intro.module.scss
+++ b/src/components/Intro.module.scss
@@ -46,21 +46,33 @@
     text-decoration: none;
     transition: .3s cubic-bezier(.4,.4,0,1);
     word-spacing: 1px;
+    align-content: center;
+    align-items: center;
     display: flex;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: flex-start;
-    align-items: flex-start;
-    background: rgba(0,0,0,0.0);
-    flex: none;
     flex-direction: column;
     flex-wrap: nowrap;
-    height: auto;
-    justify-content: flex-start;
+    pointer-events: all;
+    z-index: 0;
+    position: relative;
+    border-radius: 50%;
+    flex: none;
+    // height: 215px;
+    transition-delay: 300ms;
     transition-duration: 1000ms;
-    width: 100%;
+    width: 285px;
     max-width: 100%;
+
+    @media screen and (max-width: 540px) {
+        // flex: none;
+        // height: 180px;
+        // width: 100%;
+        // max-width: 100%;
+    }
+
+    @media screen and (max-width: 840px) {
+        width: 100%;
+        max-width: 100%;
+    }
 }
 
 .myName {
