--- a/src/components/Projects.module.scss
+++ b/src/components/Projects.module.scss
@@ -1,8 +1,17 @@
+.ProjectDiv {
+  width: 100%;
+  @media screen and (max-width: 840px) {
+    // max-width: 30%;
+  }
+}
+
 .ProjectWrapper {
     position: relative;
     width: 100%;
-    margin-top: 20px;
     margin-bottom: 20px;
+    @media screen and (max-width: 840px) {
+      margin-top: 20px;
+    }
 }
 
 .projectImg {
@@ -10,28 +19,38 @@
     height: 150px;
     object-fit: cover;
     object-position: center; 
+    filter: grayscale(100%);
+
+    @media (max-width: 768px) {
+      // height: 200px;
+    }
+      
   }
   
   .projectTech {
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.8);
     padding: 10px;
     font-size: 1em;
+    color: black;
   }
   
   .projectLink {
     position: absolute;
-    bottom: 0;
+    bottom: 5%;
     left: 0;
     right: 0;
-    // background: rgba(255,255,255,0.7); 
+    background: rgba(0,0,0,0.75);
     padding: 10px;
     font-weight: 700;
     font-size: 1.2em;
-    color: black;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center; 
+    text-decoration: none;
   }
+
