--- a/src/components/Experience.module.scss
+++ b/src/components/Experience.module.scss
@@ -476,3 +476,9 @@
     margin: 0px 0px 0px 0px;
 }
 
+.container {
+    @media screen and (min-width: 840px)
+    {
+        margin-bottom: 20px;
+    }
+}
