--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -32,7 +32,7 @@ $transition-style: .3s cubic-bezier(.4,.4,0,1);
   flex-direction: row;
   flex-wrap: nowrap;
   height: 60px;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0px 20px 0px;
   transition-delay: 0ms;
   transition-duration: 1000ms;
