--- a/src/components/Intro.module.scss
+++ b/src/components/Intro.module.scss
@@ -25,10 +25,17 @@
     transition-duration: 1000ms;
     border-radius: 0;
     flex: none;
-    height: 180px;
-    width: 100%;
-    max-width: 100%;
+    height: 200px;
+    width: 200px;
+    max-width: 200px;
     background-image: url("https://images.unsplash.com/photo-1626371653196-d86769521623?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80");
+    border-radius: 50%;
+
+    @media screen and (max-width: 1140px) {
+        border-radius: 5%;
+        width: 100%;
+        min-width: 100%
+    }
 }
 
 .IntroContainer {
@@ -310,4 +317,45 @@ h3 {
     width: auto;
     max-width: 100%;
     justify-content: center;
+}
+
+button:link,
+button:visited {
+ text-transform: uppercase;
+ text-decoration: none;
+ color: rgb(27, 27, 27);
+ padding: 10px 30px;
+ border: 1px solid;
+ border-radius: 1000px;
+ display: inline-block;
+ transition: all .2s;
+ position: relative;
+}
+
+button:hover {
+ transform: translateY(-5px);
+ box-shadow: 0 10px 20px rgba(27, 27, 27, .5);
+}
+
+button:active {
+ transform: translateY(-3px);
+}
+
+button::after {
+ content: "";
+ display: inline-block;
+ height: 100%;
+ width: 100%;
+ border-radius: 100px;
+ top: 0;
+ left: 0;
+ position: absolute;
+ z-index: -1;
+ transition: all .3s;
+}
+
+button:hover::after {
+ background-color: rgb(194, 194, 194);
+ transform: scaleX(1.4) scaleY(1.5);
+ opacity: 0;
 }
