--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -4,14 +4,15 @@
   align-content: center;
   align-items: center;
   display: flex;
-  background: #ffffff;
   flex-direction: column;
   flex-wrap: nowrap;
   height: 100%;
-  justify-content: flex-start;
-  width: 100%;
+  justify-content: center;
+  width: 1160px;
   max-width: 100%;
+  margin: 0 auto;  /* Ajoutez cette ligne pour centrer l'élément horizontalement */
 }
+
 
 
 .container {
@@ -154,6 +155,7 @@
     padding: 0px;
     width: 100%;
     max-width: 100%;
+    gap: 40px;
 
     @media screen and (max-width: 540px)
       {
@@ -189,8 +191,8 @@
     height: auto;
     justify-content: flex-start;
     margin: 0px 0px 0px 0px;
-    width: 100%;
-    max-width: 50%;
+    width: calc(100% - 20px);
+    max-width: calc(50% - 20px);
 
     @media screen and (max-width: 540px)
       {
@@ -234,19 +236,20 @@
     flex-wrap: nowrap;
     height: auto;
     justify-content: flex-start;
-    margin: 0px 0px 0px 20px;
-    width: calc(50% - 20px);
-    // max-width: calc(50% - 20px);
+
+    margin: 0;
+    width: 100%;
+    max-width: calc(50% - 20px);
 
     @media screen and (max-width: 540px) {
-        margin: 40px 0px 0px 0px;
+        margin: 0; 
         width: 100%;
         min-width: 100%;
         max-width: 100%;
     }
         
     @media screen and (max-width: 1140px) {
-        margin: 0px 0px 0px 15px;
+        margin: 0 15px 0 0; 
         width: calc(50% - 15px);
         max-width: calc(50% - 15px);
     }
