--- a/src/components/Customers.module.scss
+++ b/src/components/Customers.module.scss
@@ -1,8 +1,11 @@
 .Carroussel {
-    width: 100%;
+  width: 100%;
 }
 
 .wrapper {
-    margin: 30px 0px;
+  margin: 30px 0px;
 }
 
+.splideImg {
+  height: 100px;
+}
