--- a/src/components/Titre.module.scss
+++ b/src/components/Titre.module.scss
@@ -1,246 +1,239 @@
 .baseStyle {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
 }
 
-.TitleContainer{
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    margin: 0;
-    text-decoration: none;
-    transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
-    word-spacing: 1px;
-    display: flex;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    flex: none;
-    justify-content: space-between;
-    padding: 0px;
-    transition-duration: 1000ms;
-    width: 100%;
-    max-width: 100%;
+.TitleContainer {
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  margin: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  display: flex;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  flex: none;
+  justify-content: space-between;
+  padding: 0px;
+  transition-duration: 1000ms;
+  width: 100%;
+  max-width: 100%;
+  align-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  @media screen and (max-width: 840px) {
     align-content: flex-start;
     align-items: flex-start;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
-    @media screen and (max-width: 840px)
-    {
-        align-content: flex-start;
-        align-items: flex-start;
-        flex-direction: column;
-        flex-wrap: nowrap;
-    }
+  }
 }
 
 .TextContainer {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    display: block;
-    word-break: break-word;
-    color: #000000;
-    font-size: 16px;
-    font-weight: 400;
-    height: auto;
-    line-height: 1;
-    padding: 0px 0px 0px;
-    text-align: left;
-    flex: 1;
-    width: auto;
-    margin: 0px 0px 0px 0px;
-    max-width: 45%;
-    @media screen and (max-width: 840px)
-    {
-        max-width: 100%;
-    }
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  display: block;
+  word-break: break-word;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 400;
+  height: auto;
+  line-height: 1;
+  padding: 0px 0px 0px;
+  text-align: left;
+  flex: 1;
+  width: auto;
+  margin: 0px 0px 0px 0px;
+  max-width: 45%;
+  @media screen and (max-width: 840px) {
+    max-width: 100%;
+  }
 }
 
-
 h1 {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    pointer-events: all;
-    word-break: break-word;
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    color: inherit;
-    font-style: inherit;
-    line-height: inherit;
-    text-align: inherit;
-    display: block;
-    font-weight: 400 !important;
-    letter-spacing: -0.04em;
-    margin: 0px 0px 0px 0px;
-    font-size: 44px;
-    @media screen and (max-width: 840px)
-    {
-        font-size: 32px;
-    }
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  pointer-events: all;
+  word-break: break-word;
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  color: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  text-align: inherit;
+  display: block;
+  font-weight: 400 !important;
+  letter-spacing: -0.04em;
+  margin: 0px 0px 0px 0px;
+  font-size: 44px;
+  @media screen and (max-width: 840px) {
+    font-size: 32px;
+  }
 }
 
 .introtitle {
-    // font-weight: 400 !important;
+  // font-weight: 400 !important;
 }
 
 strong {
-    font-size: inherit;
-    letter-spacing: inherit;
-    line-height: inherit;
-    text-align: inherit;
-    color: inherit;
-    display: inline;
-    font-family: inherit;
-    font-weight: 700;
+  font-size: inherit;
+  letter-spacing: inherit;
+  line-height: inherit;
+  text-align: inherit;
+  color: inherit;
+  display: inline;
+  font-family: inherit;
+  font-weight: 700;
 }
 
 .iconItem {
-    color: white;
-    font-family: sans-serif;
-    line-height: 1;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 50%;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 38px;
-    justify-content: center;
-    margin: 0 0 0 5px;
-    width: 38px;
-    max-width: calc(100% - 5px);
+  color: white;
+  font-family: sans-serif;
+  line-height: 1;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  flex: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 38px;
+  justify-content: center;
+  margin: 0 0 0 5px;
+  width: 38px;
+  max-width: calc(100% - 5px);
 
-    @media screen and (min-width: 840px)
-    {
-        position: relative;
-        border: 1px solid white;
-        background-color: #000000;
-        overflow: hidden;
-    
-    }
+  @media screen and (min-width: 840px) {
+    position: relative;
+    border: 1px solid white;
+    background-color: #000000;
+    overflow: hidden;
+  }
 }
 
-
 .iconItem::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-width: 0 var(--icon_topRightTriangleSideLength) var(--icon_topRightTriangleSideLength) 0;
-    border-style: solid;
-    border-color: transparent white transparent transparent;
-    transition-timing-function: ease-in-out;
-    transition-duration: 0.2s;
-    --icon_topRightTriangleSideLength: 0.9rem;
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-width: 0 var(--icon_topRightTriangleSideLength)
+    var(--icon_topRightTriangleSideLength) 0;
+  border-style: solid;
+  border-color: transparent white transparent transparent;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s;
+  --icon_topRightTriangleSideLength: 0.9rem;
 }
 
 .iconItem:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .iconItem:hover::before {
-    --icon_topRightTriangleSideLength: calc(38px * 2);
+  --icon_topRightTriangleSideLength: calc(38px * 2);
 }
 
 .iconItem:focus-visible::before {
-    --icon_topRightTriangleSideLength: calc(38px * 2);
+  --icon_topRightTriangleSideLength: calc(38px * 2);
 }
 
-.iconItem > svg {
-    fill: white;
-    width: calc(38px * 0.7);
-    height: calc(38px * 0.7);
-    z-index: 1;
-    transition-timing-function: ease-in-out;
-    transition-duration: 0.2s;
+.iconItem > a > svg {
+  fill: white;
+  width: calc(38px * 0.7);
+  height: calc(38px * 0.7);
+  z-index: 1;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s;
 }
 
 .iconItem:hover {
-     color: black; 
+  color: black;
 }
 
-.iconItem:hover > svg {
-    fill: black;
-    transform: rotate(360deg);
+.iconItem:hover > a > svg {
+  fill: black;
+  transform: rotate(360deg);
 }
 
-.iconItem:focus-visible > svg {
-    fill: black;
-    transform: rotate(360deg);
+.iconItem:focus-visible > a > svg {
+  fill: black;
+  transform: rotate(360deg);
 }
 
 .iconContainer {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    display: flex;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: flex-end;
-    width: auto;
-    margin: 20px 0px 0px 0px;
-    max-width: 100%;
-    @media screen and (max-width: 840px)
-    {
-        display: none;
-    }
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  display: flex;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
+  flex: none;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: auto;
+  justify-content: flex-end;
+  width: auto;
+  margin: 20px 0px 0px 0px;
+  max-width: 100%;
+  @media screen and (max-width: 840px) {
+    display: none;
+  }
 }
