--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -111,10 +111,12 @@
   height: auto;
   justify-content: flex-start;
   margin: 0px 0px 0px 70px;
-  width: auto;
+  width: calc(100% - 285px);
+
   max-width: calc(100% - 70px);
 
   @media screen and (max-width: 840px) {
+    width: auto;
     margin: 50px 0px 0px 0px;
     max-width: 100%;
   }
