--- a/src/components/Intro.module.scss
+++ b/src/components/Intro.module.scss
@@ -1,361 +1,368 @@
 .myImage {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    z-index: 0;
-    position: relative;
-    transition-delay: 300ms;
-    transition-duration: 1000ms;
-    border-radius: 0;
-    flex: none;
-    height: 200px;
-    width: 200px;
-    max-width: 200px;
-    background-image: url("https://images.unsplash.com/photo-1626371653196-d86769521623?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80");
-    border-radius: 50%;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  z-index: 0;
+  position: relative;
+  transition-delay: 300ms;
+  transition-duration: 1000ms;
+  border-radius: 0;
+  flex: none;
+  height: 200px;
+  width: 200px;
+  max-width: 200px;
+  //   background-image: url("https://images.unsplash.com/photo-1626371653196-d86769521623?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80");
+  background-image: url("/photo.jpg");
+  filter: grayscale(100%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0% 10%;
 
-    @media screen and (max-width: 1140px) {
-        border-radius: 5%;
-        width: 100%;
-        min-width: 100%
-    }
+  border-radius: 50%;
+
+  @media screen and (max-width: 1140px) {
+    border-radius: 5%;
+    width: 100%;
+    min-width: 100%;
+    background-position: 0% 0%;
+  }
 }
 
 .IntroContainer {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    z-index: 0;
-    position: relative;
-    border-radius: 50%;
-    flex: none;
-    // height: 215px;
-    transition-delay: 300ms;
-    transition-duration: 1000ms;
-    width: 285px;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  z-index: 0;
+  position: relative;
+  border-radius: 50%;
+  flex: none;
+  // height: 215px;
+  transition-delay: 300ms;
+  transition-duration: 1000ms;
+  width: 285px;
+  max-width: 100%;
+
+  @media screen and (max-width: 540px) {
+    // flex: none;
+    // height: 180px;
+    // width: 100%;
+    // max-width: 100%;
+  }
+
+  @media screen and (max-width: 840px) {
+    width: 100%;
     max-width: 100%;
-
-    @media screen and (max-width: 540px) {
-        // flex: none;
-        // height: 180px;
-        // width: 100%;
-        // max-width: 100%;
-    }
-
-    @media screen and (max-width: 840px) {
-        width: 100%;
-        max-width: 100%;
-    }
+  }
 }
 
 .myName {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    flex: none;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    overflow: visible;
-    overflow-wrap: anywhere;
-    word-break: break-word;
-    color: #000000;
-    font-family: var(--s-font-ecbb00d0);
-    font-size: 17px;
-    font-weight: 600;
-    height: auto;
-    line-height: 1.4;
-    margin: 20px 0px 0px 0px;
-    text-align: center;
-    width: auto;
-    max-width: 100%;
-    justify-content: center;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  flex: none;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  overflow: visible;
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  color: #000000;
+  font-family: var(--s-font-ecbb00d0);
+  font-size: 17px;
+  font-weight: 600;
+  height: auto;
+  line-height: 1.4;
+  margin: 20px 0px 0px 0px;
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+  justify-content: center;
 }
 
 .myDescription {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    align-content: center;
-    align-items: center;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    display: block;
-    word-break: break-word;
-    color: rgba(0, 0, 0, 0.6);
-    font-family: var(--s-font-ecbb00d0);
-    font-size: 14px;
-    font-weight: 400;
-    height: auto;
-    line-height: 1.6;
-    margin: 35px 0px 0px 0px;
-    padding: 0px 0px 0px;
-    text-align: justify;
-    width: 600px;
-    max-width: 100%;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  align-content: center;
+  align-items: center;
+  flex: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  display: block;
+  word-break: break-word;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: var(--s-font-ecbb00d0);
+  font-size: 14px;
+  font-weight: 400;
+  height: auto;
+  line-height: 1.6;
+  margin: 35px 0px 0px 0px;
+  padding: 0px 0px 0px;
+  text-align: justify;
+  width: 600px;
+  max-width: 100%;
 }
 
 .myTable {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    display: flex;
-    flex: none;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    margin: 40px 0px 0px 0px;
-    padding: 0px;
-    width: 100%;
-    max-width: 100%;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  display: flex;
+  flex: none;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin: 40px 0px 0px 0px;
+  padding: 0px;
+  width: 100%;
+  max-width: 100%;
 }
 
-.tableRow{
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    margin: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    display: flex;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-top: 2px solid #000;
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: space-between;
-    padding: 10px 0px 10px 0px;
-    width: 100%;
-    max-width: 100%;
+.tableRow {
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  margin: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  display: flex;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
+  border-top: 2px solid #000;
+  flex: none;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: auto;
+  justify-content: space-between;
+  padding: 10px 0px 10px 0px;
+  width: 100%;
+  max-width: 100%;
 }
 
 .textTable {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    flex: none;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    overflow: visible;
-    overflow-wrap: anywhere;
-    word-break: break-word;
-    color: #000000;
-    font-family: var(--s-font-ecbb00d0);
-    font-size: 12px;
-    font-weight: 700;
-    height: auto;
-    line-height: 1.4;
-    text-align: center;
-    width: auto;
-    max-width: 100%;
-    justify-content: center;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  flex: none;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  overflow: visible;
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  color: #000000;
+  font-family: var(--s-font-ecbb00d0);
+  font-size: 12px;
+  font-weight: 700;
+  height: auto;
+  line-height: 1.4;
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+  justify-content: center;
 }
 
 .sendButton {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    display: flex;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 2px solid #000;
-    border-left: 2px solid #000;
-    border-right: 2px solid #000;
-    border-top: 2px solid #000;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 40px;
-    justify-content: center;
-    margin: 40px 0px 0px 0px;
-    width: 100%;
-    max-width: 100%;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1;
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  display: flex;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
+  border-bottom: 2px solid #000;
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
+  border-top: 2px solid #000;
+  flex: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 40px;
+  justify-content: center;
+  margin: 40px 0px 0px 0px;
+  width: 100%;
+  max-width: 100%;
 }
 
 h3 {
-    --s-font-ecbb00d0: 'Be Vietnam Pro';
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    transition: .3s cubic-bezier(.4,.4,0,1);
-    word-spacing: 1px;
-    flex: none;
-    flex-wrap: nowrap;
-    pointer-events: all;
-    position: relative;
-    z-index: 0;
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    overflow: visible;
-    overflow-wrap: anywhere;
-    word-break: break-word;
-    color: #000000;
-    font-family: var(--s-font-ecbb00d0);
-    font-size: 12px;
-    font-weight: 700;
-    height: auto;
-    line-height: 1.4;
-    text-align: center;
-    width: auto;
-    max-width: 100%;
-    justify-content: center;
+  --s-font-ecbb00d0: "Be Vietnam Pro";
+  -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  transition: 0.3s cubic-bezier(0.4, 0.4, 0, 1);
+  word-spacing: 1px;
+  flex: none;
+  flex-wrap: nowrap;
+  pointer-events: all;
+  position: relative;
+  z-index: 0;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  overflow: visible;
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  color: #000000;
+  font-family: var(--s-font-ecbb00d0);
+  font-size: 12px;
+  font-weight: 700;
+  height: auto;
+  line-height: 1.4;
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+  justify-content: center;
 }
 
 button:link,
 button:visited {
- text-transform: uppercase;
- text-decoration: none;
- color: rgb(27, 27, 27);
- padding: 10px 30px;
- border: 1px solid;
- border-radius: 1000px;
- display: inline-block;
- transition: all .2s;
- position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: rgb(27, 27, 27);
+  padding: 10px 30px;
+  border: 1px solid;
+  border-radius: 1000px;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
 }
 
 button:hover {
- transform: translateY(-5px);
- box-shadow: 0 10px 20px rgba(27, 27, 27, .5);
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(27, 27, 27, 0.5);
 }
 
 button:active {
- transform: translateY(-3px);
+  transform: translateY(-3px);
 }
 
 button::after {
- content: "";
- display: inline-block;
- height: 100%;
- width: 100%;
- border-radius: 100px;
- top: 0;
- left: 0;
- position: absolute;
- z-index: -1;
- transition: all .3s;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.3s;
 }
 
 button:hover::after {
- background-color: rgb(194, 194, 194);
- transform: scaleX(1.4) scaleY(1.5);
- opacity: 0;
+  background-color: rgb(194, 194, 194);
+  transform: scaleX(1.4) scaleY(1.5);
+  opacity: 0;
 }
