--- a/src/components/Intro.module.scss
+++ b/src/components/Intro.module.scss
@@ -154,6 +154,9 @@
   margin: 35px 0px 0px 0px;
   padding: 0px 0px 0px;
   text-align: justify;
+  word-spacing: 4px;
+  text-wrap: normal;
+  word-break: break-all;
   width: 600px;
   max-width: 100%;
 }
